Added category name when showing the category list

--- a/templates/category/list.html.twig
+++ b/templates/category/list.html.twig
@@ -5,7 +5,7 @@ PCThings | Categories
 {% endblock %}
 
 {% block pageTitle %}
-Categories
+{{ category.getName }} category
 {% endblock %}
 
 {% block bgImage %}
