--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -30,7 +30,7 @@ Log in!
         <div class="h-container h-container-to-vertical">
             <div class="v-container w-xl all-width-when-small-screen">
                 <label for="inputUsername">Username</label>
-                <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="input" required autofocus>
+                <input type="text" value="{{ last_username }}" name="email" id="inputUsername" class="input" required autofocus>
             </div>
             <div class="v-container w-xl all-width-when-small-screen">
                 <label for="inputPassword">Password</label>
