--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -78,5 +78,9 @@
 		</footer>
         
         {% block javascripts %}{% endblock %}
+		<!-- Doc for the code highlighter https://highlightjs.org/ -->
+		<link rel="stylesheet" href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.0.0/build/styles/default.min.css">
+		<script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.0.0/build/highlight.min.js"></script>
+		<script>hljs.highlightAll();</script>
     </body>
 </html>
