--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -32,24 +32,24 @@ Home
         <div>test.py</div>
         <button>Copy</button>
     </div>
-    <div>
+    <pre><code>
         <p>je suis du code</p>
         <p>hello</p>
         <p>shaféoasnégréaihféoiaeébaéusbdféuheébaéidfiuhéehaéhkdéjfhklejhalkjdlkjféheahdiluhaliguhriauhgriluhaughladhfglajdhfgliuhakljfhaslkjhfliwif saileuht liuwhfluastiualsghliuahl iughasliughliahgliahrlgfhali hrliwhsligahlihfliashdli uhgawliugali</p>
-    </div>
+    </code></pre>
 </div>
 <div class="code_container">
     <div>
         <div>je-suis-un-autre-code.cs</div>
         <button>Copy</button>
     </div>
-    <div>
+    <pre><code>
         <p>private int hello;</p>
         <p>public void Start()</p>
         <p>{</p>
         <p style="margin-left:2em;">hello = 2;</p>
         <p>}</p>
-    </div>
+    </code></pre>
 </div>
 <p></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>a</p>
 {% endblock %}
