Added a title to the code element

--- a/public/css/page_creator.css
+++ b/public/css/page_creator.css
@@ -33,6 +33,10 @@
     font-weight: 500;
 }
 
+.page-element-input.input-code-title {
+    margin-bottom: 5px;
+}
+
 .page-element-input.input-quote {
     font-family: "ABeeZee";
 	padding: 10px;
