Added remove function for all page elements

--- a/public/css/page_creator.css
+++ b/public/css/page_creator.css
@@ -32,7 +32,7 @@
 .element-header {
     display: grid;
     grid-template-columns: auto repeat(3, min-content);
-    grid-template-rows:
+    grid-template-rows: auto;
 }
 
 .control-button {
