added a simple form containing all required fields with a default category choice and hidden headerImage and thumbnail fields

--- a/templates/article/edit.html.twig
+++ b/templates/article/edit.html.twig
@@ -21,6 +21,7 @@ PCThings | {{ page.getTitle }}
 <div class="h-container">
     {{ include('template_fragment/text_editor/_text_editor.html.twig') }}
 </div>
+{{form(form)}}
 {% endblock %}
 
 {% block javascripts %}
