Added json decoding for displaying articles

--- a/templates/template_fragment/text_editor/_text_editor.html.twig
+++ b/templates/template_fragment/text_editor/_text_editor.html.twig
@@ -8,7 +8,6 @@
         <button id="AddCode">Add a code</button>
     </div>
     <div>
-        <button id="ToJson">To json</buttton>
-        <button id="ToHtml">To html</button>
+        <button id="ValidateForm">Validate form</button>
     </div>
 </div>
