--- a/templates/article/edit.html.twig
+++ b/templates/article/edit.html.twig
@@ -21,7 +21,7 @@ PCThings | {{ page.getTitle }}
 <div class="h-container">
     {{ include('template_fragment/text_editor/_text_editor.html.twig') }}
 </div>
-{{form(form)}}
+{{form(form, { 'attr': {'class': 'editForm'} }) }}
 {% endblock %}
 
 {% block javascripts %}
