--- a/templates/article/page.html.twig
+++ b/templates/article/page.html.twig
@@ -23,9 +23,9 @@ PCThings | {{ page.getTitle }}
     </div>
     <div>Category: <a src="#">{{ page.getCategory.getName }}</a></div>
     <div>{{ page.getPublicationDate.getDate|date("d/m/Y") }}</div>
-    {% if app.user == page.getWriter %}
-				<a href="{{ "/pages/" ~ page.getPathTitle ~ "/edit"}}">edit</a>
-    {% endif %}
 </div>
-{{ page.getContent|raw }}
+{% if app.user == page.getWriter %}
+    <div class="edit-button"><a href="{{ "/pages/" ~ page.getPathTitle ~ "/edit"}}">Edit</a></div>
+{% endif %}
+{{ include('template_fragment/text_editor/_json_to_text.html.twig', {'JSON': page.getContent}) }}
 {% endblock %}
