--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -32,28 +32,24 @@ Home
         <div>test.py</div>
         <button>Copy</button>
     </div>
-    <pre><code>
+    <div>
         <p>je suis du code</p>
         <p>hello</p>
         <p>shaféoasnégréaihféoiaeébaéusbdféuheébaéidfiuhéehaéhkdéjfhklejhalkjdlkjféheahdiluhaliguhriauhgriluhaughladhfglajdhfgliuhakljfhaslkjhfliwif saileuht liuwhfluastiualsghliuahl iughasliughliahgliahrlgfhali hrliwhsligahlihfliashdli uhgawliugali</p>
-    </code></pre>
+    </div>
 </div>
 <div class="code_container">
     <div>
         <div>je-suis-un-autre-code.cs</div>
         <button>Copy</button>
     </div>
-    <pre><code>using UnityEngine;
-
-public class Test : MonoBehaviour
-{
-    public Transform cube;
-    void Update()
-    {
-        int test = 0;
-        cube.Position = Vector3.Zero;
-    }
-}</code></pre>
+    <div>
+        <p>private int hello;</p>
+        <p>public void Start()</p>
+        <p>{</p>
+        <p style="margin-left:2em;">hello = 2;</p>
+        <p>}</p>
+    </div>
 </div>
 <p></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>a</p>
 {% endblock %}
