--- a/public/css/style.css
+++ b/public/css/style.css
@@ -784,6 +784,7 @@ form {
 	padding:10px;
 	margin-top: 5px;
 	margin-bottom: 5px;
+	display: block;
 }
 .alert-form {
 	max-width: calc(900px - 24px);
@@ -792,13 +793,50 @@ form {
 	background-color: rgb(120, 0, 0);
 	border: 2px solid red;
 }
-.alert-info {
+.alert-warning {
 	background-color: rgb(120, 120, 0);
 	border: 2px solid yellow;
+}
+.alert-info {
+	background-color: rgb(0, 80, 155);
+	border: 2px solid rgb(0, 162, 255);
 }
 .alert-success {
 	background-color: rgb(0, 120, 0);
 	border: 2px solid rgb(0, 255, 0);
+}
+
+.custom-text-info {
+	margin-top: 20px;
+	width: 100%;
+}
+
+.custom-text-info th {
+	font-weight: bold;
+	font-size: 1.1em;
+}
+
+.custom-text-info tr:hover td {
+	background-color: var(--color-accent-darker);
+}
+
+.custom-text-info tr:hover td>.custom-text-info-syntaxe-color {
+	color: var(--color);
+}
+
+.custom-text-info td>.custom-text-info-syntaxe-color {
+	transition: all 0.5s;
+}
+
+.custom-text-info td, .custom-text-info th {
+	background-color: var(--color-lighter);
+	padding: 10px;
+	transition: all 0.5s;
+}
+
+.custom-text-info-syntaxe-color {
+	color: var(--color-accent-darker);
+	font-style: italic;
 }
 
 
