--- a/templates/blog/user_blog.html.twig
+++ b/templates/blog/user_blog.html.twig
@@ -8,7 +8,7 @@ PCThings | {{ user.getDisplayedNickName }}'s Blog
 {{ user.getDisplayedNickName }}'s Blog
 {% endblock %}
 {% block return %}
-<a href="{{ path("blog") }}">⇽ Blogs</a>
+<a class="link" href="{{ path("blog") }}">⇽ Blogs</a>
 {% endblock %}
 
 {% block bgImage %}
