--- a/templates/category/list.html.twig
+++ b/templates/category/list.html.twig
@@ -8,7 +8,7 @@ PCThings | Categories
 {{ category.getName }} category
 {% endblock %}
 {% block return %}
-<a href="{{ path("category_index") }}">⇽ Categories</a>
+<a class="link" href="{{ path("category_index") }}">⇽ Categories</a>
 {% endblock %}
 
 {% block bgImage %}
