--- a/public/css/page_creator.css
+++ b/public/css/page_creator.css
@@ -2,6 +2,63 @@
     --control-button-size: 15px;
 }
 
+.editForm>div div {
+    display: flex;
+    flex-direction: row;
+    padding-bottom: 10px;
+}
+
+.editForm>div div>label {
+    width: 250px;
+}
+
+
+.add-button-cluster {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 5px;
+    margin: 10px 0px 30px 0px;
+}
+
+.add-button-cluster * {
+    flex-basis: 200px !important;
+    flex-grow: 1;
+}
+
+.custom-text-info {
+	margin-top: 60px;
+	width: 100%;
+}
+
+.custom-text-info th {
+	font-weight: bold;
+	font-size: 1.1em;
+}
+
+.custom-text-info tr:hover td {
+	background-color: var(--color-accent-darker);
+}
+
+.custom-text-info tr:hover td>.custom-text-info-syntaxe-color {
+	color: var(--color);
+}
+
+.custom-text-info td>.custom-text-info-syntaxe-color {
+	transition: all 0.5s;
+}
+
+.custom-text-info td, .custom-text-info th {
+	background-color: var(--color-lighter);
+	padding: 10px;
+	transition: all 0.5s;
+}
+
+.custom-text-info-syntaxe-color {
+	color: var(--color-accent-darker);
+	font-style: italic;
+}
+
 /*
  * common rules
  */
