--- a/templates/blog/blog_post.html.twig
+++ b/templates/blog/blog_post.html.twig
@@ -8,7 +8,7 @@ PCThings | {{ blogPost.getWriter.getDisplayedNickName }}'s Blog
 <a class="title-link" href="{{ path("user_blog", {username: blogPost.getWriter.getUsername, page: 1}) }}">{{ blogPost.getWriter.getDisplayedNickName }}'s Blog</a>
 {% endblock %}
 {% block return %}
-<a href="{{ path("category_list", {name: blogPost.getCategory.getName}) }}">⇽ {{ blogPost.getCategory.getName }} category</a>
+<a class="link" href="{{ path("category_list", {name: blogPost.getCategory.getName}) }}">⇽ {{ blogPost.getCategory.getName }} category</a>
 {% endblock %}
 
 {% block bgImage %}
