--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -20,7 +20,8 @@ Home
 <p>hello</p>
 <p class="quote">je suis une quote</p>
 <button>button</button>
-<a href="#" >lien</a>
+<button class="button-slicker">button</button>
+<a class="link" href="#" >lien</a>
 <div class="colorShowContainer">
     <div class="colorShow"></div>
     <div class="colorShow"></div>
