--- a/templates/template_fragment/_blog.html.twig
+++ b/templates/template_fragment/_blog.html.twig
@@ -1,4 +1,4 @@
-<div class="blog-link" onclick="window.location.href='{{ path("user_blog", {username: blogPostLink.username}) }}';">
+<a class="blog-link" href={{ path("user_blog", {username: blogPostLink.username}) }}>
     <div class="blog-link-content">
         <img src={{ profil_pic_dir }}{{ asset(blogPostLink.profilPic) }} onerror="this.src='/images/icons/no_pic_user.png'">
         <div>
@@ -6,4 +6,4 @@
         </div>
     </div>
     <div class="arrow">»</div>
-</div>
+</a>
