--- a/templates/template_fragment/_post.html.twig
+++ b/templates/template_fragment/_post.html.twig
@@ -1,4 +1,4 @@
-<div class="post-link" onclick="window.location.href='{{ path("page", {pathTitle: page.getPathTitle}) }}';">
+<a class="post-link" href={{ path("page", {pathTitle: page.getPathTitle}) }}>
     <div class="post-link-content">
         <img src={{ page.getThumbnail.getPath }} alt={{page.getHeaderImage.getAlt}}>
         <div>
@@ -8,4 +8,4 @@
         <p>{{ page.getPublicationDate.getDate|date("d/m/Y")}}</p>
     </div>
     <div class="arrow">»</div>
-</div>
+</a>
