--- a/templates/template_fragment/_side_nav_entry.html.twig
+++ b/templates/template_fragment/_side_nav_entry.html.twig
@@ -1,1 +1,1 @@
-<div class="animated-link border-b" onclick="window.location.href='{{ link }}';"><div>{{ title }}</div><div>»</div></div>
+<a class="animated-link border-b" href={{ link }}><div>{{ title }}</div><div>»</div></a>
