--- a/templates/template_fragment/_list_article.html.twig
+++ b/templates/template_fragment/_list_article.html.twig
@@ -1,1 +1,1 @@
-<div class="category-list-element" onclick="window.location.href='{{ path("page", {pathTitle: article.getPathTitle}) }}';"><p>{{ article.getTitle }}</p></div>
+<a class="category-list-element" href={{ path("page", {pathTitle: article.getPathTitle}) }}><p>{{ article.getTitle }}</p></a>
