--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -54,27 +54,25 @@
 			</div>
 		</div>
 		<footer>
-			<div class="h-container all-width">
-				<div class="v-container w-xl">
-					<div>hi</div>
-					<div>hi</div>
-					<div>hi</div>
-					<div>hi</div>
-					<div>hi</div>
+			<div class="footer h-container all-width">
+				<div class="v-container w-xl m-top-20">
+					<div class="title">Navigation</div>
+					<div><a href={{ path('index') }}>Main page</a></div>
+					<div><a href={{ path('pages') }}>Articles</a></div>
+					<div><a href={{ path('blog') }}>Blogs</a></div>
+					<div><a href={{ path('category_index') }}>Categories</a></div>
+					<div><a href={{ path('contact') }}>Contact</a></div>
 				</div>
-				<div class="v-container w-m">
-					<div>hi</div>
-					<div>hi</div>
-					<div>hi</div>
-					<div>hi</div>
-					<div>hi</div>
+				<div class="v-container w-xl m-top-20">
+					<div class="title">Creators</div>
+					<div><a href="https://github.com/yoyozbi">Yohan Zbinden's GitHub</a></div>
+					<div><a href="https://github.com/JolanAklin">Jolan Aklin's GitHub</a></div>
 				</div>
-				<div class="v-container w-m">
-					<div>hi</div>
-					<div>hi</div>
-					<div>hi</div>
-					<div>hi</div>
-					<div>hi</div>
+				<div class="v-container all-width m-top-20">
+					<div>Copyright 2021 Jolan Aklin and Yohan Zbinden</div>
+					<div>This software is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, version 3 of the License.</div>
+					<div>See the GitHub page for more infos</div>
+					<div><a href="https://github.com/JolanAklin/website-pcthings/" target="_blank">PcThings' GitHub</a></div>
 				</div>
 			</div>
 		</footer>
