--- a/templates/template_fragment/text_editor/_json_to_text.html.twig
+++ b/templates/template_fragment/text_editor/_json_to_text.html.twig
@@ -15,7 +15,11 @@
         <p class="quote" >
         {% set content = TwigHelper.SplitText(TwigHelper.URLDecode(pageElement.Content)) %}
         {% for key, quote in content %}
-            {{ TwigHelper.FormatText(quote)|raw }}</br>
+        {% if key + 2 < content|length %}
+                {{ TwigHelper.FormatText(quote)|raw }}</br>
+            {% else %}
+                {{ TwigHelper.FormatText(quote)|raw }}
+            {% endif %}
         {% endfor %}
         </p>
 
