Filled in contact page

--- a/templates/home/contact.html.twig
+++ b/templates/home/contact.html.twig
@@ -16,5 +16,14 @@ Contact
 {% endblock %}
 
 {% block mainText %}
-<p>some sort of contact</p>
+<h1>Creators</h1>
+<p>Yohan Zbinden</p>
+<ul>
+    <li>GitHub : <a class="link" href="https://github.com/yoyozbi" target="_blank">https://github.com/yoyozbi</a></li>
+</ul>
+<p>Jolan Aklin</p>
+<ul>
+    <li>GitHub : <a class="link" href="https://github.com/JolanAklin" target="_blank">https://github.com/JolanAklin</a></li>
+</ul>
+<p>Check out the website repo at <a class="link" href="https://github.com/JolanAklin/website-pcthings" target="_blank">https://github.com/JolanAklin/website-pcthings</a></p>
 {% endblock %}
