--- a/templates/blog/edit.html.twig
+++ b/templates/blog/edit.html.twig
@@ -19,7 +19,7 @@ PCThings | {{ blogPost.getTitle }}
 
 {% block mainText %}
 <div class="h-container">
-    {#<a class="button-slicker" href={{ path('page', {pathTitle: page.pathTitle}) }}>See page</a>#}
+    <a class="button-slicker" href={{ path('user_blog_post', {blogId: blogPost.getId}) }}>See blog</a>
     {{ include('template_fragment/text_editor/_text_editor.html.twig', {form: form}) }}
 </div>
 
