begin adding a table element

--- a/templates/template_fragment/text_editor/_text_editor.html.twig
+++ b/templates/template_fragment/text_editor/_text_editor.html.twig
@@ -6,6 +6,7 @@
         <button class="button-slicker" id="AddParagraph">Add a paragraph</button>
         <button class="button-slicker" id="AddQuote">Add a quote</button>
         <button class="button-slicker" id="AddCode">Add a code</button>
+        <button class="button-slicker" id="AddTable">Add a table</button>
     </div>
     {{form(form, { 'attr': {'class': 'editForm'} }) }}
     <div>
